[tool.poetry]
name = "pitchbook-presentation"
version = "0.1.0"
description = ""
authors = ["jpcsoup <jpcsoup@gmail.com>"]
readme = "README.md"
packages = [{include = "pitchbook_presentation"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
numpy = "^1.26.2"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
jupyter = "^1.0.0"
sklearn = "^0.0.post11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
